feat(climateRationale - key facts): Add poverty insight
  BREAKING CHANGE: Temp. disable of some of the larger sql queries to avoid spamming our s3 and speed up page render while working on section 1

--- a/notebooks/climateRational/notebook.qmd
+++ b/notebooks/climateRational/notebook.qmd
@@ -74,7 +74,8 @@ keyFactsInsight = () => {
       (c) => `
 **${_lang(iso3ToTranslation[c])}**
 
-${agInsight(c)}
+${agInsight(c)} \n
+${povInsight(c)}
   `,
     )
     .join("\n\n");
@@ -463,10 +464,6 @@ landuse_plotData = {
   `)
   return resp
 }
-
-gdp_plotData
-
-landuse_plotData
 ```
 
 ```{ojs}
@@ -499,6 +496,8 @@ pov_plotData = {
   `);
   return withAdminName(resp)
 }
+
+pov_plotData
 ```
 
 ```{ojs}
@@ -867,7 +866,44 @@ climateForm();
 ### Insights - Key Facts
 
 ```{ojs}
-povInsight = async () => {};
+povInsight = (iso3) => {
+  const insightBase = nbText.sections.keyFacts.quickInsight.poverty;
+  const countryTemplate = _lang(insightBase.country);
+  const directions = nbText.general.direction;
+  const country = _lang(iso3ToTranslation[iso3]);
+
+  const _pov = pov_plotData.filter(
+    (d) => d.iso3 === iso3 && d.group === "in_poverty",
+  );
+
+  const _countryPov = _pov.find((d) => !d.admin1_name)?.pov_rate;
+  const _adminPov = _pov.filter((d) => d.admin1_name);
+
+  const _countryInsight = Lang.reduceReplaceTemplateItems(countryTemplate, [
+    { name: "country", value: country },
+    { name: "povPct", value: _countryPov.toFixed(1) },
+  ]);
+
+  const _adminInsight =
+    _adminPov.length > 0
+      ? _adminPov
+          .map((d) => {
+            const direction =
+              d.pov_rate > _countryPov ? directions.greater : directions.less;
+            const adminTemplate = _lang(insightBase.admin);
+            return Lang.reduceReplaceTemplateItems(adminTemplate, [
+              { name: "admin", value: d.admin1_name },
+              { name: "povPct", value: d.pov_rate.toFixed(1) },
+              { name: "direction", value: _lang(direction) },
+            ]);
+          })
+          .join("\n")
+      : "";
+
+  return _adminInsight
+    ? `${_countryInsight}\n${_adminInsight}`
+    : _countryInsight;
+};
 
 agInsight = (iso3) => {
   const _agGDP = gdp_plotData
@@ -904,7 +940,7 @@ agInsight = (iso3) => {
   return Lang.reduceReplaceTemplateItems(template, items);
 };
 
-exposureInsight = async () => {};
+exposureInsight = () => {};
 ```
 
 ## Figures
