feat(multi-select): Add optional select/dis-select all buttons to the multi-select

--- a/notebooks/hazardExposure/component_example.qmd
+++ b/notebooks/hazardExposure/component_example.qmd
@@ -84,7 +84,11 @@ renderCropSelector = () => {
     multiple: true,
     label: "Crop",
   })
-  enhancedMultiSelect(input, { maxSelections: null, requireAtLeastOne: false })
+  enhancedMultiSelect(input, {
+    maxSelections: null,
+    requireAtLeastOne: false,
+    enableSelectAll: true
+  })
   return Inputs.bind(input, viewof globalCrop)
 }
 
