feat(genderNB): Add in new map function and some other additional pieces for gender notebook

--- a/notebooks/gender/notebook.qmd
+++ b/notebooks/gender/notebook.qmd
@@ -27,10 +27,19 @@ atlasTOC({
 });
 ```
 
-# `{ojs} heading1` {#example-heading1}
+# `{ojs} heading1` {#genderHotspots}
 
 ```{ojs}
-getAdminBoundaries([0, 1]);
+import { makeChoropleth, renderGeoMap } from "/helpers/plot.ojs";
+boundaries = getAdminBoundaries([0, 1]);
+
+boundaries;
+```
+
+```{ojs}
+makeChoropleth({
+  features: boundaries.admin1,
+});
 ```
 
 ```{ojs}
@@ -43,6 +52,20 @@ admin0Select;
 {{< lipsum 2 >}}
 
 # `{ojs} heading2` {#example-heading2}
+
+```{ojs}
+import {
+  selectCommodity,
+  cropTranslations,
+  prod_type,
+} from "./hazExposure.ojs";
+```
+
+```{ojs}
+prod_type;
+cropTranslations;
+selectCommodity();
+```
 
 {{< lipsum 2 >}}
 
@@ -230,3 +253,6 @@ htl.html`
     }
   });
 </script> -->
+
+```
+```
