feat: dynamically set plot and map domains and simplify axis and legend labels across notebooks.

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -237,11 +237,14 @@ viewof s2HazardType = Inputs.radio(
   }
 );
 
-viewof s2ReadinessThreshold = Inputs.range([0, 1], {
+viewof s2ReadinessThreshold = {
+  const extent = d3.extent(combinedData, d => d.cis_readiness_index);
+  return Inputs.range([extent[0] || 0, extent[1] || 1], {
   label: _lang(cis.s2ReadinessThreshold),
-  step: 0.05,
-  value: 0
+  step: 0.01,
+  value: extent[0] || 0
 });
+}
 
 viewof s2ViewToggle = Inputs.radio(
   ["map", "table"],
