--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -915,8 +915,8 @@ s3BivariateMap = {
       marginTop: 80,
       marginBottom: 80,
       x: {
-        domain: [0, 1],
-        label: "Value (0-1 scale)",
+        domain: d3.extent([...s3SortedData.map(d => d.cis_readiness_avg || 0), ...s3SortedData.map(d => d.accessValue || 0)]),
+        label: "Value",
         grid: true,
         axis: "top"
       },
@@ -925,7 +925,7 @@ s3BivariateMap = {
         domain: s3SortedData.map(d => d.admin0_name)
       },
       marks: [
-        Plot.axisX({anchor: "bottom", label: "Value (0-1 scale)"}),
+        Plot.axisX({anchor: "bottom", label: "Value"}),
         // Connecting lines
         Plot.link(linkData, {
           x1: "cis_readiness_avg",
@@ -1088,11 +1088,11 @@ s3BivariateMap = {
           marginLeft: 60,
           grid: true,
           x: {
-            domain: [0, 1],
+            domain: d3.extent(facetData, d => d.cis_readiness_avg),
             label: _lang(cis.s3ReadinessLabel) + " →"
           },
           y: {
-            domain: [0, 1],
+            domain: d3.extent(facetData, d => d.accessValue),
             label: "Access →"
           },
           fx: {
@@ -1137,9 +1137,9 @@ s3BivariateMap = {
                 fx: d => getFx(d.accessType),
                 fy: d => getFy(d.accessType),
                 fill: d => {
-                  // Calculate bivariate class for this specific access type
-                  const readinessClass = d.cis_readiness_avg > 0.67 ? "High" : d.cis_readiness_avg > 0.33 ? "Moderate" : "Low";
-                  const accessClass = d.accessValue > 0.67 ? "High" : d.accessValue > 0.33 ? "Moderate" : "Low";
+                  // Calculate bivariate class for this specific access type using dynamic cutoffs
+                  const readinessClass = d.cis_readiness_avg >= cisReadinessCutoffs.moderate ? "High" : d.cis_readiness_avg >= cisReadinessCutoffs.low ? "Moderate" : "Low";
+                  const accessClass = d.accessValue >= s3AccessCutoffs.moderate ? "High" : d.accessValue >= s3AccessCutoffs.low ? "Moderate" : "Low";
                   return s3BivariateColors[`${readinessClass} × ${accessClass}`] || "#cccccc";
                 },
                 stroke: "#333",
@@ -1243,13 +1243,13 @@ s3BivariateMap = {
       cis_readiness_avg: "CIS Readiness (Raw)",
       readinessClass: "CIS Class",
       tv_pct: "TV Access (%)",
-          tv_norm: "TV (0-1)",
+          tv_norm: "TV",
       internet_pct: "Internet (%)",
-          internet_norm: "Internet (0-1)",
+          internet_norm: "Internet",
       cellphone_pct: "Cellphone (%)",
-          cellphone_norm: "Cellphone (0-1)",
+          cellphone_norm: "Cellphone",
           combined_pct: "Combined (%)",
-          combined_norm: "Combined (0-1)",
+          combined_norm: "Combined",
       gap: "Gap"
     },
     format: {
@@ -1354,13 +1354,13 @@ s3Insights = {
         "CIS Readiness Raw": safeFormat(d.cis_readiness_avg, 3),
         "CIS Readiness Class": d.readinessClass || "N/A",
         "TV Access %": safeFormat(d.tv_pct, 1),
-        "TV Access 0-1": safeFormat(d.tv_norm, 3),
+        "TV Access": safeFormat(d.tv_norm, 3),
         "Internet Access %": safeFormat(d.internet_pct, 1),
-        "Internet Access 0-1": safeFormat(d.internet_norm, 3),
+        "Internet Access": safeFormat(d.internet_norm, 3),
         "Cellphone Access %": safeFormat(d.cellphone_pct, 1),
-        "Cellphone Access 0-1": safeFormat(d.cellphone_norm, 3),
+        "Cellphone Access": safeFormat(d.cellphone_norm, 3),
         "Combined Access %": safeFormat(d.combined_pct, 1),
-        "Combined Access 0-1": safeFormat(d.combined_norm, 3),
+        "Combined Access": safeFormat(d.combined_norm, 3),
         "Gap (Access - Readiness)": safeFormat(d.gap, 3),
         "Bivariate Category": d.bivariateClass || "N/A"
       })),
