--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -609,10 +609,10 @@ s11MapData = {
           projection: {type: "mercator", domain: s11MapData},
           color: useRaw ? {
             type: "linear",
-            domain: [0, 1],
+            domain: d3.extent(s11MapData.features, d => d.properties.weatherStation),
             scheme: "YlGnBu",
             legend: true,
-            label: "Density (0-1)"
+            label: "Density"
           } : {
             type: "categorical",
             domain: ["Weaker", "Moderate", "Stronger"],
@@ -623,7 +623,7 @@ s11MapData = {
           marks: [
             Plot.geo(s11MapData.features, {
               fill: useRaw ? d => d.properties.weatherStation : d => d.properties.weatherStationClass,
-              stroke: d => d.properties.isHighlighted ? "#000" : "#333",
+              stroke: d => d.properties.isHighlighted ? "#000" : "#fff",
               strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
             }),
             Plot.tip(
@@ -664,10 +664,10 @@ s11MapData = {
           projection: {type: "mercator", domain: s11MapData},
           color: useRaw ? {
             type: "linear",
-            domain: [0, 1],
+            domain: d3.extent(s11MapData.features, d => d.properties.cloudCover),
             scheme: "YlGnBu",
             legend: true,
-            label: "Coverage (0-1)"
+            label: "Coverage"
           } : {
             type: "categorical",
             domain: ["Weaker", "Moderate", "Stronger"],
@@ -678,7 +678,7 @@ s11MapData = {
           marks: [
             Plot.geo(s11MapData.features, {
               fill: useRaw ? d => d.properties.cloudCover : d => d.properties.cloudCoverClass,
-              stroke: d => d.properties.isHighlighted ? "#000" : "#333",
+              stroke: d => d.properties.isHighlighted ? "#000" : "#fff",
               strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
             }),
             Plot.tip(
@@ -913,13 +913,13 @@ s12MapData = {
       width: 2000,
       height: 1000,
       projection: {type: "mercator", domain: s12MapData},
-      color: useRaw ? {
-        type: "linear",
-        domain: [0, 4],
-        scheme: "Viridis",
-        legend: true,
-        label: "Agreement (0-4)"
-      } : {
+          color: useRaw ? {
+            type: "linear",
+            domain: d3.extent(s12MapData.features, d => d.properties.precipAgreement),
+            scheme: "Viridis",
+            legend: true,
+            label: "Agreement"
+          } : {
         type: "categorical",
         domain: ["No agreement (Very Low)", "Partial agreement (Moderate)", "High agreement (High)", "Full agreement (Very High)"],
         range: ["#fee5d9", "#fcae91", "#fb6a4a", "#a50f15"],
@@ -929,7 +929,7 @@ s12MapData = {
       marks: [
         Plot.geo(s12MapData.features, {
           fill: useRaw ? d => d.properties.precipAgreement : d => d.properties.precipAgreementClass,
-          stroke: d => d.properties.isHighlighted ? "#000" : "#333",
+          stroke: d => d.properties.isHighlighted ? "#000" : "#fff",
           strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
         }),
         Plot.tip(
@@ -1211,7 +1211,7 @@ s13Data = {
       x: { 
         grid: true,
         axis: "top",
-        label: "RPSS (0-1) or Δ"
+        label: "RPSS or Δ"
       },
       fy: { 
         padding: 0,  // Set padding to 0 to reduce spacing between bars
@@ -1231,7 +1231,7 @@ s13Data = {
         // X-axis at bottom
         Plot.axisX({ 
           anchor: "bottom", 
-          label: "RPSS (0-1) or Δ"
+          label: "RPSS or Δ"
         }),
         Plot.barX(longData, {
           x: "value",
@@ -1360,11 +1360,14 @@ viewof s14ViewType = Inputs.radio(["Map", "Table", "Heatmap"], {
   value: "Map"
 })
 
-viewof s14Threshold = Inputs.range([0, 1], {
-  label: _lang(cis.thresholdLabel),
-  value: 0.5,
-  step: 0.05
-})
+viewof s14Threshold = {
+  const extent = d3.extent(filteredData, d => d["cis_readiness_index"]);
+  return Inputs.range([extent[0] || 0, extent[1] || 1], {
+    label: _lang(cis.thresholdLabel),
+    value: (extent[0] + extent[1]) / 2 || 0.5,
+    step: 0.01
+  });
+}
 ```
 
 ```{ojs}
@@ -1470,24 +1473,24 @@ s14MapData = {
       projection: {type: "mercator", domain: s14MapData},
       color: {
         type: "linear",
-        domain: [0, 1],
+        domain: d3.extent(s14MapData.features, d => d.properties.cisReadiness),
         scheme: "RdYlGn",
         legend: true,
-        label: "CIS Readiness Index (0-1)"
+        label: "CIS Readiness Index"
       },
       marks: [
         // Regions below threshold - slightly transparent
         Plot.geo(belowThreshold, {
           fill: d => d.properties.cisReadiness,
           fillOpacity: 0.5,
-          stroke: d => d.properties.isHighlighted ? "#000" : "#999",
+          stroke: d => d.properties.isHighlighted ? "#000" : "#fff",
           strokeWidth: d => d.properties.isHighlighted ? 2.5 : 0.5
         }),
         // Regions above threshold - fully opaque with bold border
         Plot.geo(aboveThreshold, {
           fill: d => d.properties.cisReadiness,
           fillOpacity: 1,
-          stroke: d => d.properties.isHighlighted ? "#000" : "#333",
+          stroke: d => d.properties.isHighlighted ? "#000" : "#fff",
           strokeWidth: d => d.properties.isHighlighted ? 2.5 : 1.5
         }),
         Plot.tip(
@@ -1649,7 +1652,7 @@ s14MapData = {
           scheme: "RdYlBu",
           reverse: true,  // Red = high, Blue = low
           legend: true,
-          label: "Value (0-1)"
+          label: "Value"
         },
         marks: [
           Plot.cell(longData, {
