refactor: refine CIS readiness index display by enhancing class labels, shortening various labels, adding raw data exports, and adjusting chart margins.

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -1507,16 +1507,19 @@ s14MapData = {
                   label: "CIS Readiness",
                   value: (d) => d.properties.cisReadiness
                 },
-                threshold: {
-                  label: "Threshold Status",
-                  value: (d) => d.properties.cisReadiness >= s14Threshold ? "Above threshold" : "Below threshold"
-                },
                 class: {
-                  label: "Class",
-                  value: (d) => d.properties.cisReadinessClass
+                  label: "Classification",
+                  value: (d) => {
+                    const c = d.properties.cisReadinessClass;
+                    // Map tercile terms to Low/Medium/High
+                    if (c === "Weaker") return "Low (Weaker)";
+                    if (c === "Moderate") return "Medium (Moderate)";
+                    if (c === "Stronger") return "High (Stronger)";
+                    return c;
+                  }
                 },
                 weatherStation: {
-                  label: "Weather Station",
+                  label: "Weather Stn",
                   value: (d) => d.properties.weatherStationClass
                 },
                 cloudCover: {
@@ -1524,28 +1527,17 @@ s14MapData = {
                   value: (d) => d.properties.cloudCoverClass
                 },
                 precipAgreement: {
-                  label: "Precip Agreement",
+                  label: "Precip Agree",
                   value: (d) => d.properties.precipAgreementClass
-                },
-                shortTerm: {
-                  label: "Short-term",
-                  value: (d) => d.properties.shortTerm
-                },
-                longTerm: {
-                  label: "Long-term",
-                  value: (d) => d.properties.longTerm
                 }
               },
               format: {
                 region: true,
-                cisReadiness: (d) => d != null ? d.toFixed(3) : "N/A",
-                threshold: true,
+                cisReadiness: (d) => d != null ? `${d.toFixed(3)} (Relative to SSA)` : "N/A",
                 class: true,
                 weatherStation: true,
                 cloudCover: true,
-                precipAgreement: true,
-                shortTerm: (d) => d != null ? d.toFixed(3) : "N/A",
-                longTerm: (d) => d != null ? d.toFixed(3) : "N/A"
+                precipAgreement: true
               }
             })
           )
@@ -1566,13 +1558,16 @@ s14MapData = {
         : `${d.admin2_name}, ${d.admin1_name}`;
       return {
         "Admin Name": adminName,
-      "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
-      "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
-      "Weather Station (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
-      "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
-      "Precip Agreement (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
-      "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
-      "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
+        "CIS Readiness (Raw)": d["cis_readiness_index"]?.toFixed(3) || "N/A",
+        "CIS Readiness (Class)": classifyTercile(d["cis_readiness_index"], africaTerciles.cisReadiness),
+        "Weather Stn (Raw)": d["weather-station_density"]?.toFixed(3) || "N/A",
+        "Weather Stn (Class)": classifyTercile(d["weather-station_density"], africaTerciles.weatherStation),
+        "Cloud Cover (Raw)": d["cloud-coverage_meanannual"]?.toFixed(3) || "N/A",
+        "Cloud Cover (Class)": classifyTercile(d["cloud-coverage_meanannual"], africaTerciles.cloudCover),
+        "Precip Agree (Raw)": d["cv-precipitation_agreement"]?.toFixed(1) || "N/A",
+        "Precip Agree (Class)": classifyPrecipAgreement(d["cv-precipitation_agreement"]),
+        "Short-term (Raw)": d["short-term_frcst_skill"]?.toFixed(3) || "N/A",
+        "Long-term (Raw)": d["seasonal_frcst_skill"]?.toFixed(3) || "N/A"
       };
     });
     
@@ -1636,7 +1631,7 @@ s14MapData = {
         height: height,
         marginLeft: marginLeft,
         marginTop: 80,  // More space for rotated axis labels
-        marginBottom: 50,
+        marginBottom: 120, // Increased bottom margin as requested
         marginRight: 20,
         x: {
           label: null,
