--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -682,7 +682,8 @@ s2BivariateMap = {
   function bi_legend(selection) {
     const size = 40;
     const gap = 2;
-    const classes = ["Low", "Moderate", "High"];
+    // Order classes High -> Low to place High-High at Top (0,0) and Low-Low at Bottom (2,2)
+    const classes = ["High", "Moderate", "Low"]; 
     const totalWidth = size * 3 + gap * 2;
     const totalHeight = size * 3 + gap * 2;
     const centerX = totalWidth / 2;
@@ -692,10 +693,12 @@ s2BivariateMap = {
     const legendContent = selection.append("g");
     
     // Legend squares with hover tooltips
+    // i = rows (Hazard), j = cols (Readiness)
     classes.forEach((hazardClass, i) => {
       classes.forEach((readinessClass, j) => {
-        const key = `${readinessClass} × ${classes[2 - i]}`;
-        const isPriority = readinessClass === "High" && classes[2 - i] === "High";
+        // Construct key to match color map format
+        const key = `${readinessClass} × ${hazardClass}`;
+        const isPriority = readinessClass === "High" && hazardClass === "High";
         
         const rect = legendContent
           .append("rect")
@@ -703,18 +706,23 @@ s2BivariateMap = {
           .attr("y", i * (size + gap))
           .attr("width", size)
           .attr("height", size)
-          .attr("fill", bivariateColors[key])
+          //.attr("fill", bivariateColors[key]) // Use helper lookup or direct global
+          .attr("fill", (d) => {
+             // For Section 2, color scale uses keys like "Low × Low"
+             // Ensure we match the global bivariateColors object logic
+             return bivariateColors[key] || "#ccc";
+          })
           .attr("stroke", isPriority ? "#000" : "#999")
           .attr("stroke-width", isPriority ? "2.5" : "0.5")
           .style("cursor", "pointer");
         
-        // Add hover tooltip - matching Plot.tip pattern
+        // Add hover tooltip
         rect
           .on("mousemove", (event) => {
             const tooltipHtml = `
               <table>
                 <tr><th>CIS Readiness</th><td>${readinessClass}</td></tr>
-                <tr><th>Hazard Severity</th><td>${classes[2 - i]}</td></tr>
+                <tr><th>Hazard Severity</th><td>${hazardClass}</td></tr>
                 <tr><th>Category</th><td>${key}</td></tr>
               </table>
             `;
@@ -730,53 +738,79 @@ s2BivariateMap = {
       });
     });
     
-    // Rotate the entire legend 45 degrees to make it a diamond
+    // Axes and Labels (Attached to unrotated group, then rotated)
+    
+    // Readiness Arrow (Along Bottom Edge: Right -> Left)
+    // Indicates Low(Right) -> High(Left) Readiness
+    legendContent.append("line")
+      .attr("x1", totalWidth)
+      .attr("y1", totalHeight + 8)
+      .attr("x2", 0)
+      .attr("y2", totalHeight + 8)
+      .attr("stroke", "#333")
+      .attr("stroke-width", 1.5)
+      .attr("marker-end", "url(#arrowhead)");
+
+    // Readiness Label (Below Bottom Edge)
+    legendContent.append("text")
+      .attr("x", totalWidth / 2)
+      .attr("y", totalHeight + 22)
+      .attr("text-anchor", "middle")
+      .attr("font-size", "11px")
+      .attr("font-weight", "bold")
+      .attr("fill", "#333")
+      .text("CIS Readiness");
+
+    // Hazard Arrow (Along Right Edge: Bottom -> Top)
+    // Indicates Low(Bottom) -> High(Top) Hazard
+    legendContent.append("line")
+      .attr("x1", totalWidth + 8)
+      .attr("y1", totalHeight)
+      .attr("x2", totalWidth + 8)
+      .attr("y2", 0)
+      .attr("stroke", "#333")
+      .attr("stroke-width", 1.5)
+      .attr("marker-end", "url(#arrowhead)");
+
+    // Hazard Label (Right of Right Edge, Rotated -90)
+    legendContent.append("text")
+      .attr("x", totalWidth + 22)
+      .attr("y", totalHeight / 2)
+      .attr("text-anchor", "middle")
+      .attr("font-size", "11px")
+      .attr("font-weight", "bold")
+      .attr("fill", "#333")
+      .attr("transform", `rotate(-90, ${totalWidth + 22}, ${totalHeight / 2})`)
+      .text("Hazard Severity");
+
+    // Define arrow marker
+    const defs = selection.append("defs");
+    defs.append("marker")
+      .attr("id", "arrowhead")
+      .attr("viewBox", "0 0 10 10")
+      .attr("refX", 8)
+      .attr("refY", 5)
+      .attr("markerWidth", 6)
+      .attr("markerHeight", 6)
+      .attr("orient", "auto")
+      .append("path")
+      .attr("d", "M 0 0 L 10 5 L 0 10 z")
+      .attr("fill", "#333");
+    
+    // Rotate the entire legend 45 degrees
     legendContent.attr("transform", `rotate(45, ${centerX}, ${centerY})`);
-    
-    // Calculate the rotated diamond corners for proper label positioning
-    // After 45° rotation, the diamond extends from the center by totalWidth/2 * sqrt(2)
-    const diagonalOffset = (totalWidth / 2) * Math.sqrt(2);
-    
-    // CIS Readiness label - along Top-RIGHT edge (starts at top, goes down-right)
-    // Anchored at top corner, rotated 45 degrees
-    selection
-      .append("text")
-      .attr("x", centerX + 10)
-      .attr("y", centerY - diagonalOffset - 5)
-      .attr("font-size", "11")
-      .attr("fill", "#333")
-      .attr("font-weight", "600")
-      .attr("text-anchor", "start")
-      .attr("dominant-baseline", "auto") // text sits above the line
-      .attr("transform", `rotate(45, ${centerX + 10}, ${centerY - diagonalOffset - 5})`)
-      .text("CIS Readiness →");
-    
-    // Hazard Severity label - along Top-LEFT edge (starts at top, goes down-left)
-    // Anchored at top corner, rotated -45 degrees
-    selection
-      .append("text")
-      .attr("x", centerX - 10)
-      .attr("y", centerY - diagonalOffset - 5)
-      .attr("font-size", "11")
-      .attr("fill", "#333")
-      .attr("font-weight", "600")
-      .attr("text-anchor", "end")
-      .attr("dominant-baseline", "auto") // text sits above the line
-      .attr("transform", `rotate(-45, ${centerX - 10}, ${centerY - diagonalOffset - 5})`)
-      .text("Hazard Severity →");
     
     return selection;
   }
   
   // Add legend to SVG - positioned to avoid overflow
-  // Position it at bottom-left with enough space for the rotated diamond
-  const legendX = 20;
-  const legendY = height - 180;
+  const legendX = 60; // Adjusted for padding
+  const legendY = height - 160;
   const legendGroup = svg
     .append("g")
     .attr("transform", `translate(${legendX}, ${legendY})`);
   
-  // Apply the legend function to the group using .call()
+  // Apply the legend function
   legendGroup.call(bi_legend);
   
   return svg.node();
